--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sprint12",
   "version": "1.0.0",
-  "description": "sprint12 from yandex.praktikum",
+  "description": "sprint15 from yandex.praktikum",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -25,6 +25,7 @@
     "express-rate-limit": "^5.1.3",
     "express-winston": "^4.0.3",
     "helmet": "^3.22.0",
+    "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.14",
     "validator": "^13.0.0",
